implementing user API endpoints
