# internal/dto/response_model.go
@@ -8,7 +8,7 @@ import (
 
 // TODO: ms version dto...
 
-type MsRespDto RespDto[MsDto]
+type MsRespDto RespDto[*MsDto]
 type MsListRespDto RespDto[[]MsDto]
 
 type MsDto struct {
@@ -17,7 +17,7 @@ type MsDto struct {
 	Description *string   `json:"description,omitempty"`
 }
 
-func NewMsRespDtoFromModel(m *model.Microservice) *MsDto {
+func NewMsDtoFromModel(m *model.Microservice) *MsDto {
 	return &MsDto{
 		ID:          m.ID,
 		Name:        m.Name,
@@ -25,11 +25,37 @@ func NewMsRespDtoFromModel(m *model.Microservice) *MsDto {
 	}
 }
 
-func NewMsRespListDtoFromModels(models []model.Microservice) []MsDto {
-	var mrd []MsDto
+func NewMsListDtoFromModels(models []model.Microservice) []MsDto {
+	var mld []MsDto
 	for _, m := range models {
-		d := NewMsRespDtoFromModel(&m)
-		mrd = append(mrd, *d)
+		d := NewMsDtoFromModel(&m)
+		mld = append(mld, *d)
 	}
-	return mrd
+	return mld
+}
+
+type UserRespDto RespDto[*UserDto]
+type UserListRespDto RespDto[[]UserDto]
+
+type UserDto struct {
+	ID    uuid.UUID `json:"id"`
+	Name  string    `json:"name"`
+	Email string    `json:"email"`
+}
+
+func NewUserDtoFromModel(m *model.User) *UserDto {
+	return &UserDto{
+		ID:    m.ID,
+		Name:  m.Name,
+		Email: m.Email,
+	}
+}
+
+func NewUserListDtoFromModels(models []model.User) []UserDto {
+	var uld []UserDto
+	for _, m := range models {
+		d := NewUserDtoFromModel(&m)
+		uld = append(uld, *d)
+	}
+	return uld
 }
