# internal/model/user.go
@@ -1,0 +1,28 @@
+package model
+
+import (
+	"github.com/google/uuid"
+	"golang.org/x/crypto/bcrypt"
+	"gorm.io/gorm"
+)
+
+type User struct {
+	gorm.Model
+	ID       uuid.UUID `gorm:"type:uuid"`
+	Name     string    `gorm:"string"`
+	Email    string    `gorm:"uniqueIndex:user_email_uniq_idx"`
+	Password string    `gorm:"string"`
+}
+
+func (u *User) HashPassword() error {
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(u.Password), bcrypt.DefaultCost)
+	if err != nil {
+		return err
+	}
+	u.Password = string(hashedPassword)
+	return nil
+}
+
+func (u *User) CheckPassword(password string) bool {
+	return bcrypt.CompareHashAndPassword([]byte(u.Password), []byte(password)) == nil
+}
